// 文件位置：pbfile/studnet.proto
// 指定使用的语法格式，根据自己下载的protoc的版本选择
syntax = "proto3";
// 指定代码生成在哪个位置
option go_package = "./pd";
// 指定包名
package pd;

message Student{
  string name = 1;
  int32 age = 2;
}
// 定义请求体结构
message StudentRequest{
  int32 number = 1; //请求中传入学生的学号，1表示占位符
}

// 定义响应体结构
message StudentResponse{
  Student student = 1;
}

//定义一个服务,根据学生的学号查询学生的信息
service StudentService{
  rpc GetStudentByStuNumber(StudentRequest) returns(StudentResponse);
  rpc GetStudentByStuNumberClientStream(stream  StudentRequest) returns(StudentResponse);
  rpc GetStudentByStuNumberServerStream(StudentRequest) returns(stream StudentResponse);
  rpc GetStudentByStuNumberStockStream(stream  StudentRequest) returns(stream StudentResponse);
}

